--- a/index.html
+++ b/index.html
@@ -2052,7 +2052,7 @@
 <script>
 // 1. SOUND LOGIC (update src if needed; many use similar files from myinstants/zedge)
 // You can replace with: https://www.myinstants.com/media/sounds/system-notifikason-solo-leveling.mp3
-const systemSound = new Audio("../system-notifikason-solo-leveling.mp3");
+const systemSound = new Audio("./system-notifikason-solo-leveling.mp3");
 systemSound.volume = 0.6;
 
 function playSystemSound() {
@@ -2119,4 +2119,5 @@ function closeSection(id) {
 </script>
 
 </body>
+
 </html>
