--- a/index.html
+++ b/index.html
@@ -2028,7 +2028,7 @@
         <div class="click-hint">SYNC_LINK</div>
       </a>
 
-      <a href="https://github.com/vamsipendem" target="_blank" class="reward-slot interactive-slot" style="--slot-color: #ffffff;">
+      <a href="https://github.com/pendemvamsi" target="_blank" class="reward-slot interactive-slot" style="--slot-color: #ffffff;">
         <div class="slot-hex">🐙</div>
         <div class="slot-info">
           <span class="slot-type">SOURCE_ACCESS</span>
@@ -2121,4 +2121,5 @@ function closeSection(id) {
 </body>
 
 </html>
+
 
